1) Makes sure that when a PrintSettings is created it is initialized from the default printer. 2) Mail now uses the nsIWebBrowserPrint interface to create the PrintSettings object it caches and uses 3) Editor now creates and caches a PrintSettings object. Bug 123554 r=dcone sr=attinasi