xpfe/browser/resources/content/browser.js
@@ -90,18 +90,6 @@ function GetPrintSettings(webBrowserPrint)
       } else {
         gPrintSettings = webBrowserPrint.globalPrintSettings;
       }
-
-      // only do this the first time
-      if (prevPS == null) {
-        var defPrinterName = webBrowserPrint.defaultPrinterName;
-        if (defPrinterName != "") {
-          if (gPrintSettings.printerName == null || gPrintSettings.printerName == "") {
-            gPrintSettings.printerName = defPrinterName;
-          }
-          webBrowserPrint.initPrintSettingsFromPrinter(gPrintSettings.printerName, gPrintSettings);
-        }
-      }
-
     }
   } catch (e) {
     alert("GetPrintSettings "+e);
